# pedidos-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  script.sh
.github/: test.yaml
.github/workflows/: linter.yaml  test.yaml
common/: Cargo.toml
common/src/: config.json  configuration.rs  constants.rs  lib.rs  protocol.rs  tcp.rs  udp_gateway.rs  utils.rs
common/src/tcp/: tcp_connector.rs  tcp_message.rs  tcp_sender.rs
common/src/utils/: colors.rs  logger.rs
customer/: Cargo.toml
customer/src/: customer.rs  main.rs
docs/: contribute.md
payment/: Cargo.toml
payment-system/: Cargo.toml
payment-system/src/: main.rs  payment_system.rs
pedidos-rust/: Cargo.toml
pedidos-rust/src/: client_connection.rs  connection_gateway.rs  connection_manager.rs  heartbeat.rs  main.rs  messages.rs  nearby_entitys.rs  server.rs  server_peer.rs
restaurant/: Cargo.toml
restaurant/src/: cliente_restaurante_de_juguete.rs  main.rs  restaurant.rs
rider/: Cargo.toml
rider/src/: main.rs  rider.rs
