[package]
name = "pedidos-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}
actix = "0.13.5"
actix-rt = "2.10.0"
actix_async_handler = "0.1.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
